[package]
name = "demo"
version = "0.1.0"
authors = ["fishedee <306766045@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-preview = { version = "=0.3.0-alpha.18", features = ["compat"] }

hyper = "0.12.36"
